dialog z-index fix

--- a/assets/sass/app/_alert.scss
+++ b/assets/sass/app/_alert.scss
@@ -78,6 +78,7 @@
   position: fixed;
   background: #000;
   opacity: 0;
+  display:none;
   z-index: -5;
   -webkit-transition: all 0.5s ease-in-out;
   -moz-transition: all 0.5s ease-in-out;
