--- a/styles/main.css
+++ b/styles/main.css
@@ -23984,6 +23984,7 @@ input[id="mce-EMAIL"]:focus + .email-btn {
   position: fixed;
   background: #000;
   opacity: 0;
+  display: none;
   z-index: -5;
   -webkit-transition: all 0.5s ease-in-out;
   -moz-transition: all 0.5s ease-in-out;
@@ -25409,48 +25410,48 @@ ul.pressfacts li {
 }
 
 .ball-grid-beat > div:nth-child(1) {
-  animation-delay: 0.27s;
-  animation-duration: 1.55s;
+  animation-delay: 0.15s;
+  animation-duration: 0.7s;
 }
 
 .ball-grid-beat > div:nth-child(2) {
-  animation-delay: 0.69s;
-  animation-duration: 1.15s;
+  animation-delay: 0.04s;
+  animation-duration: 1.34s;
 }
 
 .ball-grid-beat > div:nth-child(3) {
-  animation-delay: 0.64s;
-  animation-duration: 1.11s;
+  animation-delay: 0s;
+  animation-duration: 1.6s;
 }
 
 .ball-grid-beat > div:nth-child(4) {
-  animation-delay: 0.68s;
-  animation-duration: 1.4s;
+  animation-delay: -0.1s;
+  animation-duration: 1.57s;
 }
 
 .ball-grid-beat > div:nth-child(5) {
-  animation-delay: 0.05s;
-  animation-duration: 1.32s;
+  animation-delay: -0.03s;
+  animation-duration: 0.9s;
 }
 
 .ball-grid-beat > div:nth-child(6) {
-  animation-delay: -0.05s;
-  animation-duration: 1.4s;
+  animation-delay: 0.42s;
+  animation-duration: 1.54s;
 }
 
 .ball-grid-beat > div:nth-child(7) {
-  animation-delay: 0.58s;
-  animation-duration: 0.84s;
+  animation-delay: 0.24s;
+  animation-duration: 1.24s;
 }
 
 .ball-grid-beat > div:nth-child(8) {
-  animation-delay: 0.75s;
-  animation-duration: 0.79s;
+  animation-delay: 0.79s;
+  animation-duration: 1.51s;
 }
 
 .ball-grid-beat > div:nth-child(9) {
-  animation-delay: 0.2s;
-  animation-duration: 1.5s;
+  animation-delay: 0.06s;
+  animation-duration: 1.18s;
 }
 
 .ball-grid-beat > div {
@@ -25486,48 +25487,48 @@ ul.pressfacts li {
 }
 
 .ball-grid-pulse > div:nth-child(1) {
-  animation-delay: 0.35s;
-  animation-duration: 1.34s;
+  animation-delay: 0.23s;
+  animation-duration: 0.75s;
 }
 
 .ball-grid-pulse > div:nth-child(2) {
-  animation-delay: 0.14s;
-  animation-duration: 0.82s;
+  animation-delay: 0.59s;
+  animation-duration: 1.11s;
 }
 
 .ball-grid-pulse > div:nth-child(3) {
-  animation-delay: 0.32s;
-  animation-duration: 0.62s;
+  animation-delay: -0.19s;
+  animation-duration: 1.55s;
 }
 
 .ball-grid-pulse > div:nth-child(4) {
-  animation-delay: -0.05s;
-  animation-duration: 1.31s;
+  animation-delay: 0.12s;
+  animation-duration: 0.96s;
 }
 
 .ball-grid-pulse > div:nth-child(5) {
-  animation-delay: 0.5s;
-  animation-duration: 1.03s;
+  animation-delay: 0.21s;
+  animation-duration: 0.74s;
 }
 
 .ball-grid-pulse > div:nth-child(6) {
-  animation-delay: 0.2s;
-  animation-duration: 1.26s;
+  animation-delay: 0.47s;
+  animation-duration: 1.16s;
 }
 
 .ball-grid-pulse > div:nth-child(7) {
-  animation-delay: 0.02s;
-  animation-duration: 0.7s;
+  animation-delay: -0.07s;
+  animation-duration: 1.3s;
 }
 
 .ball-grid-pulse > div:nth-child(8) {
-  animation-delay: 0.36s;
-  animation-duration: 0.97s;
+  animation-delay: 0.12s;
+  animation-duration: 0.95s;
 }
 
 .ball-grid-pulse > div:nth-child(9) {
-  animation-delay: 0.1s;
-  animation-duration: 0.72s;
+  animation-delay: 0.17s;
+  animation-duration: 0.73s;
 }
 
 .ball-grid-pulse > div {
@@ -25865,23 +25866,23 @@ ul.pressfacts li {
 }
 
 .line-scale-party > div:nth-child(1) {
-  animation-delay: -0.1s;
-  animation-duration: 1.07s;
+  animation-delay: 0.1s;
+  animation-duration: 1.2s;
 }
 
 .line-scale-party > div:nth-child(2) {
-  animation-delay: 0.21s;
-  animation-duration: 0.97s;
+  animation-delay: 0.05s;
+  animation-duration: 0.7s;
 }
 
 .line-scale-party > div:nth-child(3) {
-  animation-delay: -0.08s;
-  animation-duration: 0.5s;
+  animation-delay: 0.37s;
+  animation-duration: 0.53s;
 }
 
 .line-scale-party > div:nth-child(4) {
-  animation-delay: 0.16s;
-  animation-duration: 0.68s;
+  animation-delay: -0.18s;
+  animation-duration: 1.06s;
 }
 
 .line-scale-party > div {
